--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
      <header class="header">
-         <a href="#" class="logo">Logo</a>
+         <a href="https://avatars.mds.yandex.net/get-pdb/1621302/eefd8679-42b3-4242-a4dd-8d2e32014f13/s1200?webp=false" class="logo">Logo</a>
          <nav class="nav">
              <a href="#" class="nav-itm"></a>
              <a href="#" class="nav-itm"></a>
